--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "Vicious",
   "description": "A dark theme for Visual Studio Code",
   "version": "1.0.0",
+  "releasedDate": "2023-11-18",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.84.0"
   },
