--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "icon": "assets/logo.png",
   "galleryBanner": {
-    "color": "#F1C981",
+    "color": "#08090E",
     "theme": "dark"
   },
   "categories": [
